<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/j_bseek"
        android:textColor="#2E7D32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/jobType"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/whichTypeOfJob"
        android:textSize="@dimen/sp_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/imgDesigner"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_52"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_designer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobType"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtDeveloper"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_44"
        android:text="@string/Developer"
        app:layout_constraintLeft_toRightOf="@+id/imgDesigner"
        app:layout_constraintStart_toEndOf="@+id/imgDesigner"
        app:layout_constraintTop_toBottomOf="@+id/txtDesigner"
        app:layout_constraintWidth_percent="0.6"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_52"
        app:layout_constraintStart_toEndOf="@id/txtDesigner"
        app:layout_constraintTop_toBottomOf="@id/jobType"
        tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imgDeveloper"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_44"
        android:src="@drawable/img_developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesigner"
        android:contentDescription="@string/app_name"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtDesigner"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_52"
        android:text="@string/Designer"
        app:layout_constraintLeft_toRightOf="@+id/imgDesigner"
        app:layout_constraintStart_toEndOf="@+id/imgDesigner"
        app:layout_constraintTop_toBottomOf="@+id/jobType"
        app:layout_constraintWidth_percent="0.6"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMaterial"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_52"
        app:layout_constraintStart_toEndOf="@id/txtDesigner"
        app:layout_constraintTop_toBottomOf="@id/jobType"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/btnSwitch"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_44"
        app:layout_constraintStart_toEndOf="@id/txtDeveloper"
        app:layout_constraintTop_toBottomOf="@id/btnMaterial"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imgContract"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_44"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_administritive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDeveloper"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtAdministrative"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_44"
        android:text="@string/Administrative"
        app:layout_constraintStart_toEndOf="@+id/imgContract"
        app:layout_constraintTop_toBottomOf="@+id/txtDeveloper"
        app:layout_constraintWidth_percent="0.6"
        tools:ignore="TextSizeCheck" />

    <RadioButton
        android:id="@+id/btnRadio"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/dp_44"
        app:layout_constraintStart_toEndOf="@id/txtAdministrative"
        app:layout_constraintTop_toBottomOf="@id/txtDeveloper" />

    <ImageView
        android:id="@+id/imgmarketing"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_44"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_marketing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAdministrative"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtMarketing"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_44"
        android:text="@string/Administrative"
        app:layout_constraintStart_toEndOf="@+id/imgmarketing"
        app:layout_constraintTop_toBottomOf="@+id/txtAdministrative"
        app:layout_constraintWidth_percent="0.6"
        tools:ignore="TextSizeCheck" />

    <CheckBox
        android:id="@+id/btncheckbox"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/txtAdministrative"
        app:layout_constraintTop_toBottomOf="@+id/btnRadio"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>