<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rv_call_bg"
        tools:context=".home.fragment.ProfileFragment">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_26"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/profile_name"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_profile" />

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_1"
            android:text="@string/profile_email"
            android:textColor="@color/email_text"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/first_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_email"
            app:strokeColor="@color/seperator"
            app:strokeWidth="0.5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/item1"
                    layout="@layout/item_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:status='@{"Status"}'
                    app:statusDescription='@{"Available"}' />

                <View
                    android:id="@+id/seperator1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:background="@color/seperator"
                    app:layout_constraintTop_toBottomOf="@id/item1" />

                <include
                    android:id="@+id/item2"
                    layout="@layout/item_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/item1"
                    app:status='@{"Status Message"}'
                    app:statusDescription='@{"The unseen of spending three years at Pixelgra"}' />

                <View
                    android:id="@+id/seperator2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/seperator"
                    app:layout_constraintTop_toBottomOf="@id/item2" />

                <include
                    android:id="@+id/item3"
                    layout="@layout/item_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/seperator2"
                    app:status='@{"Meeting ID"}'
                    app:statusDescription='@{"Generate Automatically"}' />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/second_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            app:layout_constraintTop_toBottomOf="@id/first_cardView"
            app:strokeColor="@color/seperator"
            app:strokeWidth="0.5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/item4"
                    layout="@layout/item2_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:status='@{"Personal info"}' />

                <View
                    android:id="@+id/seperator3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:background="@color/seperator"
                    app:layout_constraintTop_toBottomOf="@id/item4" />

                <include
                    android:id="@+id/item5"
                    layout="@layout/item2_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/seperator3"
                    app:status='@{"Help"}' />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_logout"
            android:layout_margin="@dimen/dp_16"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/img_logout"
            android:text="@string/logout"
            android:textAlignment="textStart"
            android:textColor="@color/red"
            app:cornerRadius="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="@id/second_cardView"
            app:layout_constraintStart_toStartOf="@id/second_cardView"
            app:layout_constraintTop_toBottomOf="@id/second_cardView"
            tools:ignore="RtlHardcoded,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
